# kickoff

./: .cirrus.yml  .gitignore  Cargo.toml  README.md  foobar  program_list
.github/workflows/: aur-git.yml  ci.yml
assets/: default_config.toml
benches/: selection.rs
ci/: generate-pkgbuild.py
scripts/: passmenu.sh
src/: app.rs  cli.rs  color.rs  config.rs  default_config.toml  font.rs  gui.rs  history.rs  keybinds.rs  lib.rs  main.rs  selection.rs
template/kickoff-git/: PKGBUILD
