[package]
name = "kickoff"
version = "0.7.2"
authors = ["Folke Gleumes <folke-kickoff@gleumes.org>"]
edition = "2021"
description = "Fast and minimal program launcher"
license = "GPL-3.0-or-later"
homepage = "https://github.com/j0ru/kickoff"
repository = "https://github.com/j0ru/kickoff"
readme = "README.md"
keywords = ["wayland", "launcher", "wlroots"]

[dependencies]
smithay-client-toolkit = "0.18"
fontdue = "0.8"
image = { version = "0.24", default-features = false }
fuzzy-matcher = "0.3"
nix = { version = "0.28", default_features = false, features = ["process"] }
css-color = "0.2"
exec = "0.3"
xdg = "2.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
log = "0.4"
env_logger = "0.10"
x11-keysymdef = "0.2.0"
fontconfig = "0.7"
notify-rust = "4.10"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
futures = "0.3"
wayland-client = "0.31"
anyhow = "1.0.75"
wl-clipboard-rs = "0.8"

[dependencies.tokio]
version = "1.35"
features = [
  "fs",
  "rt-multi-thread",
  "io-util",
  "time",
  "rt",
  "macros",
  "io-std",
]
default-features = false

[profile.release]
lto = true
