[package]
name = "kickoff"
version = "0.7.4"
authors = ["Folke Gleumes <folke-kickoff@gleumes.org>"]
edition = "2021"
description = "Fast and minimal program launcher"
license = "GPL-3.0-or-later"
homepage = "https://github.com/j0ru/kickoff"
repository = "https://github.com/j0ru/kickoff"
readme = "README.md"
keywords = ["wayland", "launcher", "wlroots"]
rust-version = "1.77"

[dependencies]
smithay-client-toolkit = "0.19"
fontdue = "0.9"
image = { version = "0.25", default-features = false }
fuzzy-matcher = "0.3"
nix = { version = "0.29", default-features = false, features = ["process"] }
css-color = "0.2"
exec = "0.3"
xdg = "2.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
fontconfig = "0.9"
notify-rust = "4.11"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
futures = "0.3"
wayland-client = "0.31"
anyhow = "1.0"
wl-clipboard-rs = "0.9"
x11-keysymdef = "0.2.0"

[dependencies.tokio]
version = "1.42"
features = [
  "fs",
  "rt-multi-thread",
  "io-util",
  "time",
  "rt",
  "macros",
  "io-std",
]
default-features = false

[profile.release]
lto = true
debug = true
